update stations module